--- a/Backend/config/config.env
+++ b/Backend/config/config.env
@@ -1,6 +1,6 @@
 PORT=4000
 
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://restaurant-3-mixy.onrender.com
 
 MONGO_URI=mongodb+srv://lakshit:xsX4wDVZjaNGWRKm@cluster0.33jtg8f.mongodb.net/?retryWrites=true 
 
