--- a/Backend/config/config.env
+++ b/Backend/config/config.env
@@ -1,9 +1,10 @@
 PORT=4000
 
-FRONTEND_URL= https://restaurant-frontend-6gql.onrender.com/
-
+ FRONTEND_URL=https://restaurant-frontend-6gql.onrender.com
 
 MONGO_URI=mongodb+srv://lakshit:xsX4wDVZjaNGWRKm@cluster0.33jtg8f.mongodb.net/?retryWrites=true 
 
 
 
+# https://restaurant-frontend-6gql.onrender.com/
+# http://localhost:5173
